--- a/fedora-devbase/Dockerfile
+++ b/fedora-devbase/Dockerfile
@@ -2,11 +2,12 @@
 FROM fedora:21
 MAINTAINER Phil Compton <me@philcompton.com>
 ENV BUILD_DATE 2014.12.27
-RUN yum clean all && yum update -y && yum install -y wget git git-extras vim-enhanced bash-completion man-pages
+RUN yum clean all && yum update -y && yum install -y wget git git-extras vim-enhanced bash-completion man-pages ngrep tar gzip
 RUN useradd dev
 WORKDIR /home/dev
 ENV HOME /home/dev
-RUN mkdir -p $HOME/.vim/colors && mkdir -p $HOME/.vim/bundles  && mkdir -p $HOME/.vim/backups && mkdir -p $HOME/.vim/swaps && mkdir -p $HOME/.vim/syntax && mkdir -p $HOME/.vim/undo
+RUN mkdir -p $HOME/.vim/colors && mkdir -p $HOME/.vim/bundle && mkdir -p $HOME/.vim/autoload  && mkdir -p $HOME/.vim/backups && mkdir -p $HOME/.vim/swaps && mkdir -p $HOME/.vim/syntax && mkdir -p $HOME/.vim/undo
+RUN curl -LSso $HOME/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 ADD .vim/colors/solarized.vim $HOME/.vim/colors/solarized.vim
 ADD .vimrc $HOME/.vimrc
 ADD .bash_prompt $HOME/.bash_prompt
