Update to latest JDK

--- a/centos7base/Dockerfile
+++ b/centos7base/Dockerfile
@@ -1,7 +1,7 @@
 #Dockerfile to generate base image on top of CentOS 7 with Oracle JDK
 FROM centos:centos7
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2014.12.15
+ENV BUILD_DATE 2015.02.03
 RUN yum install epel-release -y && yum clean all && yum update -y && yum install -y wget git
-RUN wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u25-b17/jdk-8u25-linux-x64.rpm
-RUN rpm -ivh jdk-8u25-linux-x64.rpm && rm jdk-8u25-linux-x64.rpm
+RUN wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u31-b13/jdk-8u31-linux-x64.rpm \
+   && rpm -ivh jdk-8u31-linux-x64.rpm && rm jdk-8u31-linux-x64.rpm
