--- a/centos-jdk/Dockerfile
+++ b/centos-jdk/Dockerfile
@@ -2,5 +2,7 @@
 FROM pcompton/centos-base:latest
 MAINTAINER Phil Compton <me@philcompton.com>
 ENV BUILD_DATE 2015.06.27
-RUN curl -v -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u45-b14/jdk-8u45-linux-x64.rpm > jdk-8u45-linux-x64.rpm \
-  && rpm -ivh jdk-8u45-linux-x64.rpm && rm jdk-8u45-linux-x64.rpm
+ENV JAVA_HOME /opt/jdk1.8.0_45
+ENV PATH $PATH:$JAVA_HOME/bin
+ADD jdk-8u45-linux-x64.tar.gz /opt
+RUN update-alternatives --install "/usr/bin/java" "java" "/opt/jdk1.8.0_45/bin/java" 1
