Tweaking permission setting

--- a/centos-mariadb/Dockerfile
+++ b/centos-mariadb/Dockerfile
@@ -1,7 +1,7 @@
 #Dockerfile to generate MariaDB Server image
 FROM pcompton/centos-base:latest
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2015.07.11.a
+ENV BUILD_DATE 2015.07.12
 ENV TERM="xterm" DATADIR="/var/lib/mysql"
 ENV MYSQL_USER="myuser"
 ENV MYSQL_PASSWORD="s3cret_sauce" MYSQL_ROOT_PASSWORD="s3cret_sauce"
@@ -12,6 +12,8 @@ RUN yum install -y MariaDB-server MariaDB-client
 ADD docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod a+x /docker-entrypoint.sh
 ADD server.cnf /etc/my.cnf.d/server.cnf
+
+chown -R mysql:mysql ${DATADIR}
 
 EXPOSE 3306
 
