--- a/centos-rpmbuild/Dockerfile
+++ b/centos-rpmbuild/Dockerfile
@@ -1,8 +1,8 @@
 #Image for rpm packaging on Centos7
 FROM pcompton/centos-base:latest
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2015.07.10
-RUN yum clean all && yum update -y && yum install -y rpmdevtools mock mock-scm vim-enhanced
+ENV BUILD_DATE 2015.07.15
+RUN yum clean all && yum update -y && yum install -y rpmdevtools mock mock-scm vim-enhanced && yum clean all
 
 # Setup rpmbuild user
 RUN useradd -d /home/rpmbuild -u 9000 -m -s /bin/bash rpmbuild
