--- a/centos-artifactory/Dockerfile
+++ b/centos-artifactory/Dockerfile
@@ -1,8 +1,8 @@
 #Dockerfile to generate artifactory instance on top of CentOS 7
 FROM pcompton/centos-server-jre:latest
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2015.07.11
-ENV ARTIFACTORY_VERSION 3.9.1
+ENV BUILD_DATE 2015.07.19
+ENV ARTIFACTORY_VERSION 3.9.2
 ENV ARTIFACTORY_HOME /opt/artifactory
 
 RUN yum install -y unzip
@@ -13,5 +13,7 @@ RUN curl -fL -o /artifactory-${ARTIFACTORY_VERSION}.zip https://bintray.com/arti
 
 ENV PATH ${ARTIFACTORY_HOME}/bin:$PATH
 
+VOLUME ["${ARTIFACTORY_HOME}/data"]
+
 EXPOSE 8081
-CMD artifactory.sh
+CMD ${ARTIFACTORY_HOME}/bin/artifactory.sh
