Use custom base image

--- a/vivid-irssi/Dockerfile
+++ b/vivid-irssi/Dockerfile
@@ -1,8 +1,9 @@
 #Image for irssi on Ubuntu
-FROM pcompton/vivid-base:latest
+FROM pcompton/vivid:latest
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2015.07.24
+ENV BUILD_DATE 2015.07.25
 
+RUN echo "deb http://archive.ubuntu.com/ubuntu vivid universe" >> /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get install -y readline-common
 RUN apt-get install -y irssi irssi-plugin-otr irssi-scripts
