--- a/vivid-server-jre/Dockerfile
+++ b/vivid-server-jre/Dockerfile
@@ -1,9 +1,8 @@
 #Dockerfile to generate base image on top of CentOS 7 with Oracle Server JRE
 FROM pcompton/vivid:latest
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2015.07.25
+ENV BUILD_DATE 2015.07.26
 ENV JAVA_HOME /opt/jdk1.8.0_51
 ENV PATH $PATH:$JAVA_HOME/bin
-RUN curl -v -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u51-b16/server-jre-8u51-linux-x64.tar.gz > server-jre-8u51-linux-x64.tar.gz \
-  && tar xzf server-jre-8u51-linux-x64.tar.gz && mv jdk1.8.0_51 /opt/ && rm server-jre-8u51-linux-x64.tar.gz \
-  && update-alternatives --install "/usr/bin/java" "java" "/opt/jdk1.8.0_51/bin/java" 1
+RUN curl -v -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u51-b16/server-jre-8u51-linux-x64.tar.gz | tar -xzC /opt
+RUN update-alternatives --install "/usr/bin/java" "java" "/opt/jdk1.8.0_51/bin/java" 1
