--- a/vivid-artifactory/Dockerfile
+++ b/vivid-artifactory/Dockerfile
@@ -7,7 +7,7 @@ ENV ARTIFACTORY_HOME /opt/artifactory
 
 RUN apt-get update && apt-get install -y unzip && apt-get clean
 RUN curl -fL -o /artifactory-${ARTIFACTORY_VERSION}.zip https://bintray.com/artifact/download/jfrog/artifactory/artifactory-${ARTIFACTORY_VERSION}.zip \
-  && unzip artifactory-${ARTIFACTORY_VERSION}.zip -d /opt && rm artifactory-${ARTIFACTORY_VERSION}.zip
+  && unzip artifactory-${ARTIFACTORY_VERSION}.zip -d /opt && mv /opt/artifactory-${ARTIFACTORY_VERSION} /opt/artifactory && rm artifactory-${ARTIFACTORY_VERSION}.zip
 
 ENV PATH ${ARTIFACTORY_HOME}/bin:$PATH
 
