Refresh and use Fedora

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,15 +1,19 @@
-#Dockerfile to generate jenkins build environment on top of CentOS 7
-FROM pcompton/jdk:latest
+#Dockerfile to generate jenkins build environment
+FROM pcompton/oracle-jdk:latest
 MAINTAINER Phil Compton <me@philcompton.com>
-ENV BUILD_DATE 2015.08.19
-ENV GRADLE_VERSION 2.6
+ENV BUILD_DATE 2015.09.19
+ENV GRADLE_VERSION 2.7
 ENV GRADLE_HOME /opt/gradle-${GRADLE_VERSION}-bin
-ENV JENKINS_VERSION 1.624
+ENV JENKINS_VERSION 1.629
 ENV JENKINS_HOME /var/jenkins_home
-ENV NODE_VERSION 0.12.7
+ENV NODE_VERSION 4.1.0
 ENV NODE_HOME /opt/node
+ENV MAVEN_VERSION 3.3.3
+ENV MAVEN_HOME /opt/apache-maven-${MAVEN_VERSION}
 ENV JAVA_HOME /usr/java/jdk1.8.0_60
 ENV JDK_HOME /usr/java/jdk1.8.0_60
+
+ENV PATH ${PATH}:${JDK_HOME}/bin:${MAVEN_HOME}/bin:${GRADLE_HOME}/bin:${NODE_HOME}/bin
 
 RUN mkdir -p $JENKINS_HOME/plugins
 RUN useradd -d "$JENKINS_HOME/worker" -u 1000 -m -s /bin/bash jenkins
@@ -21,7 +25,7 @@ ADD nodejs.xml $JENKINS_HOME/nodejs.xml
 
 RUN chown -R jenkins "$JENKINS_HOME"
 
-RUN apt-get update && apt-get install -y zip unzip subversion git && apt-get clean
+RUN dnf upgrade && dnf install -y zip unzip subversion git && dnf clean
 RUN curl -fL https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip -o /gradle-${GRADLE_VERSION}-bin.zip \
     && unzip /gradle-${GRADLE_VERSION}-bin.zip -d /opt && mv /opt/gradle-${GRADLE_VERSION} /opt/gradle \
     && rm /gradle-${GRADLE_VERSION}-bin.zip
@@ -30,6 +34,8 @@ RUN mkdir -p /usr/share/jenkins/ && curl -fL http://mirrors.jenkins-ci.org/war/$
 
 RUN curl -fL http://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-linux-x64.tar.gz | tar xzC /opt \
   && mv /opt/node-v${NODE_VERSION}-linux-x64 /opt/node
+
+RUN curl -fL http://mirror.cc.columbia.edu/pub/software/apache/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz  | tar xzC /opt
 
 RUN curl -fL http://updates.jenkins-ci.org/latest/gradle.hpi -o $JENKINS_HOME/plugins/gradle.hpi
 RUN curl -fL http://updates.jenkins-ci.org/latest/nodejs.hpi -o $JENKINS_HOME/plugins/nodejs.hpi
